--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <!-- Created By CodingNepal -->
 <html lang="en" dir="ltr">
    <head>
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+
       <meta charset="utf-8">
       <title>Transparent Login Form HTML CSS</title>
       <link rel="stylesheet" href="style.css">
